--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,15 @@ website: ayushwatnani.github.io
 website_full: https://ayushwatnani.github.io
 github: ayushwatnani
 #twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
+tel: +91 81035 97224
+tel_full: tel:+918103597224
+
 #google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
 address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
+  street: 61/3 Nehru Nagar West
+  postcode: 490020
+  city: Bhilai
+  country: India
 #google_analytics: UA-69300817-1
 
 # needed for travis-ci build
