added maps link

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github: ayushwatnani
 tel: +91 81035 97224
 tel_full: tel:+918103597224
 
-#google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+google_maps: 'https://goo.gl/maps/7c11cbzF2k32'
 address:
   street: 61/3 Nehru Nagar West
   postcode: 490020
