--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email_full: mailto:ayushwatnani@email.com
 website: ayushwatnani.github.io
 website_full: https://ayushwatnani.github.io
 github: ayushwatnani
-#twitter: twitter
+twitter: ayushwatnani
 tel: +91 81035 97224
 tel_full: tel:+918103597224
 
