--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: /resume/
 title: Ayush Watnani's Resume
 name: Ayush Watnani
 email: ayushwatnani@email.com
-email_full: mailto:ayushwatnani@email.com
+email_full: mailto:ayushwatnani@gmail.com
 website: ayushwatnani.github.io
 website_full: https://ayushwatnani.github.io
 github: ayushwatnani
