--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Fábio Madeira
 baseurl: /resume/
 title: Ayush Watnani's Resume
 name: Ayush Watnani
-email: ayushwatnani@email.com
+email: ayushwatnani@gmail.com
 email_full: mailto:ayushwatnani@gmail.com
 website: ayushwatnani.github.io
 website_full: https://ayushwatnani.github.io
